wip : aumento de cobertura de testes