@@ -12,7 +12,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,7 +35,7 @@ public class BuscarClientesPorFiltroUseCase {
         Page<ClienteResponse> response = new PageImpl<>(
                 pageContent.stream()
                         .map(ClienteResponse::from)
-                        .collect(Collectors.toList()),
+                        .toList(),
                 pageable,
                 clientes.size()
         );
